force-app/main/default/objects/PhoneAfterSalesServiceForm__c/PhoneAfterSalesServiceForm__c.object-meta.xml
<CustomObject>
    <label>Fiche SAV téléphonique</label>
    <nameField>
        <displayFormat>FST/{YYYY}/{0000000}</displayFormat>
        <label>Numéro de fiche</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Fiches SAV téléphonique</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>