force-app/main/default/objects/PhoneAfterSalesServiceForm__c/fields/case__c.field-meta.xml
<CustomField>
    <fullName>case__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Requête</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Fiches SAV téléphonique</relationshipLabel>
    <relationshipName>PhoneAfterSalesServiceForms</relationshipName>
    <type>Lookup</type>
</CustomField>