force-app/main/default/objects/PhoneAfterSalesServiceForm__c/fields/entity__c.field-meta.xml
<CustomField>
    <fullName>entity__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Dépôt</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.RecordType.DeveloperName</field>
            <operation>equals</operation>
            <value>Entity</value>
        </filterItems>
        <filterItems>
            <field>Account.entityType__r.KparKReference__c</field>
            <operation>equals</operation>
            <value>DEP</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Fiches SAV téléphonique</relationshipLabel>
    <relationshipName>PhoneAfterSalesServiceForms</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>