force-app/main/default/objects/PhoneAfterSalesServiceForm__c/fields/legacyReference__c.field-meta.xml
<CustomField>
    <fullName>legacyReference__c</fullName>
    <label>Référence SAV en GC</label>
    <length>15</length>
    <type>Text</type>
</CustomField>