force-app/main/default/objects/PhoneAfterSalesServiceForm__c/fields/product__c.field-meta.xml
<CustomField>
    <fullName>product__c</fullName>
    <label>Produit</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Coulissant</fullName>
            </value>
            <value>
                <fullName>Fenêtres</fullName>
            </value>
            <value>
                <fullName>Moustiquaire</fullName>
            </value>
            <value>
                <fullName>Persienne</fullName>
            </value>
            <value>
                <fullName>Portail</fullName>
            </value>
            <value>
                <fullName>Porte de garage</fullName>
            </value>
            <value>
                <fullName>Porte de service</fullName>
            </value>
            <value>
                <fullName>Porte d’entrée</fullName>
            </value>
            <value>
                <fullName>Porte d’intérieur</fullName>
            </value>
            <value>
                <fullName>Porte-fenêtre</fullName>
            </value>
            <value>
                <fullName>Store banne</fullName>
            </value>
            <value>
                <fullName>Volet Battant</fullName>
            </value>
            <value>
                <fullName>Volet Roulant</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>