force-app/main/default/objects/PhoneAfterSalesServiceForm__c/fields/result__c.field-meta.xml
<CustomField>
    <fullName>result__c</fullName>
    <label>Résultat</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <controllingField>type__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Appel destiné à un autre service.</fullName>
            </value>
            <value>
                <fullName>Autres</fullName>
                <isActive>false</isActive>
                <label>Autres</label>
            </value>
            <value>
                <fullName>Bras</fullName>
                <isActive>false</isActive>
                <label>Bras</label>
            </value>
            <value>
                <fullName>Crémone</fullName>
                <isActive>false</isActive>
                <label>Crémone</label>
            </value>
            <value>
                <fullName>Demande d’information</fullName>
            </value>
            <value>
                <fullName>Fenêtre drapeau</fullName>
                <isActive>false</isActive>
                <label>Fenêtre drapeau</label>
            </value>
            <value>
                <fullName>Fixation</fullName>
                <isActive>false</isActive>
                <label>Fixation</label>
            </value>
            <value>
                <fullName>Infiltration</fullName>
                <isActive>false</isActive>
                <label>Infiltration</label>
            </value>
            <value>
                <fullName>Joints</fullName>
                <isActive>false</isActive>
                <label>Joints</label>
            </value>
            <value>
                <fullName>Modification de rendez-vous</fullName>
            </value>
            <value>
                <fullName>Moteur de volet HS</fullName>
            </value>
            <value>
                <fullName>Moteur HS</fullName>
                <isActive>false</isActive>
                <label>Moteur HS</label>
            </value>
            <value>
                <fullName>Pièce cassée</fullName>
                <isActive>false</isActive>
                <label>Pièce cassée</label>
            </value>
            <value>
                <fullName>Piles</fullName>
                <isActive>false</isActive>
                <label>Piles</label>
            </value>
            <value>
                <fullName>Problème de joints</fullName>
            </value>
            <value>
                <fullName>Problème de piles</fullName>
            </value>
            <value>
                <fullName>Problème d’infiltration</fullName>
            </value>
            <value>
                <fullName>Problème télécommande</fullName>
            </value>
            <value>
                <fullName>Programmation</fullName>
            </value>
            <value>
                <fullName>Question sur l’entretien</fullName>
            </value>
            <value>
                <fullName>Réglage</fullName>
                <isActive>false</isActive>
                <label>Réglage</label>
            </value>
            <value>
                <fullName>Serrure</fullName>
                <isActive>false</isActive>
                <label>Serrure</label>
            </value>
            <value>
                <fullName>Serrure HS</fullName>
            </value>
            <value>
                <fullName>Télécommande</fullName>
                <isActive>false</isActive>
                <label>Télécommande</label>
            </value>
            <value>
                <fullName>Vitrage cassé</fullName>
                <isActive>false</isActive>
                <label>Vitrage cassé</label>
            </value>
            <value>
                <fullName>Volet solaire HS</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>