force-app/main/default/objects/PhoneAfterSalesServiceForm__c/fields/type__c.field-meta.xml
<CustomField>
    <fullName>type__c</fullName>
    <label>Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Résolu</fullName>
                <default>true</default>
                <label>Résolu</label>
            </value>
            <value>
                <fullName>Non résolu</fullName>
            </value>
            <value>
                <fullName>Autre</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>