force-app/main/default/objects/PhoneAfterSalesServiceForm__c/validationRules/VR_K3_PASS_Type.validationRule-meta.xml
<ValidationRule>
    <fullName>VR_K3_PASS_Type</fullName>
    <active>true</active>
    <errorConditionFormula>$User.ByPassValidationRule__c = false &amp;&amp;
$Setup.rh2__PS_Settings__c.rh2__Run_Validation_Rule__c &amp;&amp;
ISPICKVAL(type__c, &apos;Non résolu&apos;) &amp;&amp;
ISBLANK(case__c)</errorConditionFormula>
    <errorDisplayField>case__c</errorDisplayField>
    <errorMessage>Requête obligatoire!</errorMessage>
</ValidationRule>