force-app/main/default/objects/PhoneAfterSalesServiceForm__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>entity__c</columns>
    <columns>type__c</columns>
    <columns>result__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Mine</filterScope>
    <label>Tous</label>
</ListView>