force-app/main/default/objects/PhoneAfterSalesServiceForm__c/listViews/All1.listView-meta.xml
<ListView>
    <fullName>All1</fullName>
    <columns>NAME</columns>
    <columns>type__c</columns>
    <columns>result__c</columns>
    <columns>entity__c</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <label>Tout</label>
</ListView>